--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "connect-redis": "^8.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "mustache-express": "^1.3.2",
     "mysql2": "^3.11.5",
+    "redis": "^4.7.0",
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1",
     "@types/mustache-express": "^1.2.5",
     "@types/node": "^22.10.1",
     "nodemon": "^3.1.9",
